examples/otel/istio-telemetry.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: otel-collector-disable-mtls
  namespace: gateway-system
spec:
  host: otel-collector.observability.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
